# x-heep-femu-sdk

./: .gitignore
hw/: x_heep.bit  x_heep.hwh
sw/arm/jupyter_notebooks/: hello_world.ipynb  inclass.ipynb  seizure_iter.ipynb  virtual_adc_read.ipynb  virtual_flash_read.ipynb  virtual_flash_write.ipynb
sw/arm/sdk/: x_heep_api.py
sw/riscv/: Makefile  Makefile_Yuxuan
sw/riscv/apps/floating_point_test/: floating_point_test.c
sw/riscv/apps/inclassPlus_evaluate/: CMakeLists.txt
sw/riscv/apps/inclassPlus_evaluate/include/: CompactClassificationEnsemble.h  CompactClassificationTree.h  (+28 more)
sw/riscv/apps/inclassPlus_evaluate/src/: .CMakeLists.txt.swp  CMakeLists.txt  CompactClassificationEnsemble.c  CompactClassificationModel.c  CompactClassificationModel.h  FFTImplementationCallback.c  Lorenz_features.c  Lorenz_features.h  Lorenz_plot.c  SortedBuffer.c  SortedBuffer.h  Yuxuan_iterative_test.c  abs.c  abs.h  aggregatePredict.c  aggregatePredict.h  bandpower.c  colon.c  colon.h  combineVectorElements.c  combineVectorElements.h  cospi.c  cospi.h  denoise_rwd.c  diff.c  diff.h  eml_rand_mt19937ar.c  eml_rand_mt19937ar.h  eml_rand_mt19937ar_stateful.c  eml_rand_mt19937ar_stateful.h  eml_setop.c  eml_setop.h  features_Freq_calculator.c  fft.c  filter.c  find.c  findpeaks.c  findpeaks.h  ismember.c  ismember.h  (+50 more)
sw/riscv/apps/seizure/: IterPlus_seizure_single  Iterative_seizure_single  Makefile  Makefile_double  analysis_seizure.txt  main.c  main.h  main_single.c  main_single.h  seizure_elf.txt  test.sh  test1.sh  testC.ipynb  test_configuration.py  tmp.hprof.0001.heap  write_data_to_header.py
(+670 files in other folders)
